FrontEnd/assets/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/** end reset css**/
body {
	max-width: 1140px;
	margin:auto;
	font-family: 'Work Sans';
	font-size: 14px;
	background-color:rgba(255, 254, 248, 1);
}

header {
	display: flex;
	flex-direction: column-reverse;
	margin-bottom: 50px;
}

section {
	margin: 50px 0
}

h1{
	display: flex;
	flex-direction: column;
	font-family: 'Syne';
	font-size: 22px;
	font-weight: 800;
	color: #B1663C
}

h1 > span {
	font-family: 'Work Sans';
	font-size:10px;
	letter-spacing: 0.1em;
;
}

h2{
	font-family: 'Syne';
	font-weight: 700;
	font-size: 30px;
	color: #1D6154
}
nav ul {
	display: flex;
	align-items: center;
	list-style-type: none;

}
nav li {
	padding: 0 10px;
	font-size: 1.2em;
}

li:hover {
	color: #B1663C;
}
#introduction {
	display: flex;
	align-items: center;
}
#introduction figure {
	flex: 1
}
#introduction img {
	display: block;
	margin: auto;
	width: 80%;
}

#introduction article {
	flex: 1
}
#introduction h2 {
	margin-bottom: 1em;
}

#introduction p {
	margin-bottom: 0.5em;
}
#portfolio h2 {
	text-align: center;
	margin-bottom: 1em;
}
.gallery {
	width: 100%;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-column-gap: 20px;
	grid-row-gap: 20px;
}

.gallery img {
	width: 100%;

}
#contact {
	width: 50%;
margin: auto;
}
#contact > * {
	text-align: center;

}
#contact h2{
	margin-bottom: 20px;
}
#contact form {
	text-align: left;
	margin-top:30px;
	display: flex;
	flex-direction: column;
}

#contact input {
	height: 50px;
	font-size: 1.2em;
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}
#contact label {
	margin: 2em 0 1em 0;
}
#contact textarea {
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

input[type="submit"]{
	font-family: 'Syne';
	font-weight: 700;
	color: white;
	background-color: #1D6154;
	margin : 2em auto ;
	width: 180px;
	text-align: center;
	border-radius: 60px ;
}

footer nav ul {
	display: flex;
	justify-content: flex-end;
	margin: 2em
}

.filters {
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 3em;
	gap: 2em;

}

.filter {
	padding: 10px 20px;
	border-radius: 60px;
	border: solid 1px;
	border-color: #1D6154;
	display: flex;
	justify-content: center;
	align-items: center;
	font-weight: bold;
	font-size: large;
	color: #1D6154;
	background-color: transparent;
	cursor: pointer;
	font-family: 'Syne';
}

.filter:hover {
	background-color: #1D6154;
	color: white;
}

.hidden {
	display: none;
  }



/**** MY INPUTS ****/

#topBar {
	background-color: black;
	width: 100%;
	padding: 25px 25px;
	color: white;
	display: flex;
	justify-content: center;
}

#topBar i {
	margin-right: 0.5rem;
}

/*NAVIGATION*/
.navBar {
	display: flex;
	justify-content: space-between;
	padding: 1rem 0;
}

nav a {
	text-decoration: none;
	color: black;
}

nav img {
	width: 50%;
}

/* LOGIN */
#login {
	width: 50%;
	margin: auto;
	display: flex;
    flex-direction: column;
}

#login > * {
	text-align: center;
}

#login h2{
	margin-bottom: 20px;
}

#login #errorMessage {
	color: red;
	font-weight: bold;
}

#login form {
	text-align: left;
	margin-top:30px;
	display: flex;
	flex-direction: column;
}

#login input {
	height: 50px;
	font-size: 1.2em;
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

#login label {
	margin: 2em 0 1em 0;
}

#login textarea {
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

#login button {
	height: 50px;
    font-size: 1.2em;
    border: none;
    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
	font-family: 'Syne';
    font-weight: 700;
    color: white;
    background-color: #1D6154;
    margin: 2em auto;
    width: 180px;
    text-align: center;
    border-radius: 60px;
	cursor: pointer;
}

#login a {
	color: black;
}

/*** FOOTER ***/
footer {
	background-color: white;
	padding: 10px 0;
	width: 100%;
}

.footerLogin {
	display: flex;
	justify-content: flex-end;
	margin-top: 200px;
}


/*** MODIFY BUTTON ***/
#projectTitle {
    display: flex;
    align-items: baseline; 
    justify-content:center; 
	gap: 25px;
}

.modifySection {
	display: flex;
	align-items: center;
	gap: 5px;
	cursor: pointer;
}

.modify-button {
	background-color: transparent;
    color: black;
    border: none;
    cursor: pointer;
    font-size: 20px;
	font-weight: 200;
}

/*** MODALE ***/
.modal {
    display: none; 
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.6); 
}

.modal-content {
    background-color: white;
    margin: 15% auto;
    padding: 140px 40px;
    border-radius: 8px;
    width: 600px;
    text-align: center;
}

.modal-content h3 {
    font-size: 1.8rem;
    font-weight: 500;
    color: #333;
}

.close {
    color: black;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

.modal-gallery {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(3, auto); 
    grid-gap: 15px; 
    padding: 20px;
	border-bottom: solid black 0.1rem;
}

.modal-gallery img {
    width: 100%;
    height: auto;
    object-fit: cover; 
    display: block;
    border-radius: 5px; 
}

.modal-gallery h3 {
    display: none; 
}

.trash {
    color: white;
    background-color: black;
    border-radius: 3px;
    font-size: 7px;
    padding: 3px;
    position: relative;
    bottom: 130px;
    left: 37px;
	cursor: pointer;
}

#openAddPhoto {
	margin: 80px 0 -90px 0;
    cursor: pointer;
    border: transparent;
    padding: 13px 60px;
    border-radius: 25px;
    font-size: 1.1rem;
    background-color: rgba(29, 97, 84, 1);
    color: white;
	font-family: 'Syne';
}

.iconsModale {
	display: flex;
    justify-content: space-between;
    position: relative;
    bottom: 90px;
}

#addPhotoForm {
	display: flex;
	flex-direction: column;
	align-items: center;
	border-bottom: solid black 0.1rem;
}

#addPhotoForm label {
	width: 80%;
	display: flex;
	padding: 15px 0;
}

#iconProject {
	position: relative;
	top: 130px;
}

#titleProject {
	width: 80%;
	background-color: rgba(232, 241, 246, 1);
}

#categoryProject {
	width: 80%;
	background-color: rgba(232, 241, 246, 1);
}

#addPhotoForm button {
    cursor: pointer;
    border: transparent;
    padding: 10px 110px;
    border-radius: 25px;
    font-size: 1.1rem;
    background-color: rgba(29, 97, 84, 1);
    color: white;
    font-family: 'Syne';
	margin: 70px 0 -70px 0;
}

#imagePreviewContainer {
    width: 80%;
    height: 250px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 20px;
    border-radius: 10px;
	background-color: rgba(232, 241, 246, 1);
}

#imagePreview {
    max-width: 100%;
    max-height: 100%;
    object-fit: cover;
    border-radius: 8px;
}

#placeholderText {
    color: black;
    font-size: 1.1rem;
    font-weight: bold;
	position: relative;
    top: 40px;
}

.hidden {
    display: none;
}

#imageProject {
	display: none;
}

#customFileButton {
	position: relative;
    top: 70px;
	cursor: pointer;
    border: transparent;
    padding: 10px 110px;
    border-radius: 25px;
    font-size: 1.1rem;
    background-color: rgba(203, 214, 220, 1);
    color: rgba(48, 102, 133, 1);
    font-family: 'Syne';
}

